syntax = "proto3";

package veronymous_token_info_service;

service VeronymousTokenInfoService {
  rpc GetTokenInfo(TokenInfoRequest) returns (TokenInfo);

  rpc GetNextTokenInfo(TokenInfoRequest) returns (TokenInfo);
}

message TokenInfoRequest {}

message TokenInfo {
  bytes params = 1;

  bytes public_key = 2;

  uint64 key_lifetime = 3;
}